--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
+    "build": "tsc",
+    "start": "node dist/app.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -12,24 +15,27 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.17.1",
+    "@types/express": "^4.17.21",
     "@types/hapi__joi": "^15.0.4",
     "@types/jsonwebtoken": "^8.3.4",
     "@types/mongoose": "^5.5.18",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.8",
-    "concurrently": "^4.1.2",
-    "nodemon": "^1.19.2",
+    "concurrently": "^8.2.2",
     "ts-node": "^8.4.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^3.6.3"
   },
   "dependencies": {
-    "@hapi/joi": "^16.1.4",
+    "@types/pg": "^8.11.6",
+    "@types/sequelize": "^4.28.20",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.1.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.1",
-    "morgan": "^1.9.1"
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.9.1",
+    "pg": "^8.11.5",
+    "sequelize": "^6.37.3",
+    "sequelize-typescript": "^2.1.6"
   }
 }
