--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "jwt-simple-typescript",
+  "name": "registeruserfundo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
@@ -14,28 +14,21 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
-    "@types/hapi__joi": "^15.0.4",
-    "@types/jsonwebtoken": "^8.3.4",
-    "@types/mongoose": "^5.5.18",
-    "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.8",
-    "concurrently": "^8.2.2",
+    "@types/sequelize": "^4.28.20",
     "ts-node": "^8.4.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.9.10"
   },
   "dependencies": {
-    "@types/pg": "^8.11.6",
-    "@types/sequelize": "^4.28.20",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.9.1",
     "pg": "^8.11.5",
-    "sequelize": "^6.37.3",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize": "^6.37.3"
   }
 }
