Mostrar registros de la base de datos

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 3000
 usernameDd = 'postgres'
-password =  'Wm123'
+password =  '1234'
 database = 'fundo'
 dialect = 'postgres' 
 host = 'localhost'
