--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT = 3000
+PORT = 6000
 usernameDd = 'postgres'
-password =  '1234'
+password =  'Wm123'
 database = 'fundo'
 dialect = 'postgres' 
 host = 'localhost'
