--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ES2020", // Compila a una versión moderna de ECMAScript que es compatible con versiones recientes de Node.js.
-    "module": "CommonJS", // Node.js usa CommonJS, por lo que debes ajustar esto para asegurar compatibilidad.
-    "outDir": "./dist", // Especifica el directorio de salida donde se colocarán los archivos JS compilados.
-    "rootDir": "./src", // Especifica el directorio raíz donde se encuentran los archivos TS.
-    "strict": true, // Activa todas las opciones estrictas de chequeo de tipo.
-    "esModuleInterop": true, // Permite la interoperabilidad de importación/exportación de ES6 con módulos CommonJS.
-    "skipLibCheck": true, // Omite la verificación de tipo en todas las declaraciones de las bibliotecas.
-    "forceConsistentCasingInFileNames": true, // Obliga a que los nombres de archivos sean consistentes en cuanto a mayúsculas y minúsculas.
-    "moduleResolution": "node", // Utiliza la estrategia de resolución de módulos de Node.js.
-    "resolveJsonModule": true, // Permite la carga de módulos JSON con importaciones.
-    "lib": [
-      "ES2020"
-    ], // Especifica las librerías de definiciones de tipos de características de JavaScript que el proyecto usará.
-    "noImplicitReturns": true, // Asegura que todas las funciones retornen un valor apropiadamente o no retornen nada.
-    "noUnusedLocals": true, // Reporta errores en variables locales que no se usen.
-    "noUnusedParameters": true, // Reporta errores en parámetros de funciones que no se usen.,
-    "sourceMap": true
+    "target": "ES2020",                          // Especifica la versión de JavaScript a la que se compilará el código
+    "module": "commonjs",                        // Especifica el sistema de módulos utilizado
+    "lib": ["ES2020"],                           // Incluye las declaraciones de biblioteca necesarias
+    "allowJs": true,                             // Permite compilar archivos JavaScript
+    "outDir": "./dist",                          // Directorio de salida para los archivos compilados
+    "rootDir": "./src",                          // Directorio raíz de los archivos fuente
+    "strict": true,                              // Habilita todas las comprobaciones de tipo estrictas
+    "noImplicitAny": true,                       // No permite variables de tipo any implícitas
+    "strictNullChecks": true,                    // Permite detectar valores null y undefined en tiempo de compilación
+    "strictPropertyInitialization": true,        // Asegura la inicialización correcta de propiedades en clases
+    "noImplicitReturns": true,                   // Asegura que todas las rutas de código en una función devuelvan un valor
+    "noUnusedLocals": true,                      // Detecta variables locales no utilizadas
+    "noUnusedParameters": true,                  // Detecta parámetros no utilizados
+    "moduleResolution": "node",                  // Especifica el mecanismo para resolver módulos
+    "esModuleInterop": true,                     // Habilita la interoperabilidad entre CommonJS y ES Modules
+    "resolveJsonModule": true,                   // Permite importar archivos JSON directamente
+    "emitDecoratorMetadata": true,               // Para soporte de decoradores (necesario para sequelize-typescript)
+    "experimentalDecorators": true,              // Para soporte de decoradores (necesario para sequelize-typescript)
+    "skipLibCheck": true,                        // Omite la comprobación de tipo de los archivos de declaración
+    "forceConsistentCasingInFileNames": true     // Asegura que los nombres de archivo sean tratados de forma coherente
   },
-  "include": [
-    "src/**/*"
-  ], // Incluye todos los archivos en el directorio src y subdirectorios.
-  "exclude": [
-    "node_modules",
-    "dist"
-  ] // Excluye la carpeta node_modules y dist para mejorar el rendimiento del compilador.
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
