--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
-    "@types/node": "^12.7.8",
+    "@types/node": "^12.20.55",
     "@types/sequelize": "^4.28.20",
+    "@types/validator": "^13.11.10",
     "ts-node": "^8.4.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^3.9.10"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -29,6 +30,8 @@
     "dotenv": "^8.1.0",
     "express": "^4.19.2",
     "pg": "^8.11.5",
-    "sequelize": "^6.37.3"
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.3",
+    "sequelize-typescript": "^2.1.6"
   }
 }
