--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT = 3003
 usernameDd = 'postgres'
-password =  'Wm123'
+password =  '1234'
 database = 'fundo'
 dialect = 'postgres' 
 host = 'localhost'
-AMBIENTE_API = 'PRO'
+AMBIENTE_API = 'QA'
