--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^12.20.55",
     "@types/sequelize": "^4.28.20",
+    "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.10",
     "ts-node": "^8.4.1",
     "ts-node-dev": "^2.0.0",
@@ -32,6 +33,7 @@
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "uuid": "^9.0.1"
   }
 }
